added licence to the template

--- a/src/template/src/lab/exp1/content.html
+++ b/src/template/src/lab/exp1/content.html
@@ -3723,11 +3723,11 @@ mso-bidi-theme-font:minor-bidi;}
         </article>
 	
 
-<footer  class="footer">
-        <!-- Put the content here -->
-        <div style="margin-left:35%; margin-right:35% ">
-        <a href="http://http://virtual-labs.ac.in/nmeict" >Sponsered by MHRD (NME-ICT) </a> | <a href="http://http://virtual-labs.ac.in/licensing" target="_blank"> Licensing Terms </a>
-        </div>
+        <footer  class="footer">
+            <!-- Put the content here -->
+            <div style="margin-left:40%; margin-right:40% ">
+            <a href="../license/index.html" target="_blank" style="margin:auto"> Licensing Terms </a>
+            </div>
       </footer> 
     </div>
 </body>
