--- a/src/template/src/lab/license/index.html
+++ b/src/template/src/lab/license/index.html
@@ -10,9 +10,11 @@
 <form id="form_246914" class="appnitro">
 <div class="form_description">
 <h2 align="center"><b style="font-size:24;font-family:Georgia,'Times New Roman',Times,serif;color:black;">Licensing</b></h2>
-<b style="font-size:18;font-family:Georgia,'Times New Roman',Times,serif;color:#4169E1;">Introduction</b><br>
+<b style="font-size:18;font-family:Georgia,'Times New Roman',Times,serif;color:#4169E1;">Introduction</b>
+<br>
 
-Virtual Labs are released under the <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/legalcode">CC-BY-NC-SA-3.0</a> license.<br> 
+Content and Sources are released under two different licenses.
+<br> 
 <br>
 <b style="font-size:18;font-family:Georgia,'Times New Roman',Times,serif;color:#4169E1;">Content License</b><br>
 
@@ -20,7 +22,7 @@ The content of Virtual Labs is released under the <a href="http://creativecommon
 <br>
 <b style="font-size:18;font-family:Georgia,'Times New Roman',Times,serif;color:#4169E1;">Source Code License</b><br>
 
-The source code for Virtual Labs is released under the GPLv3 (General Public License version 3) license.<br> 
+The sources of Virtual Labs are released under the <a href="http://www.gnu.org/licenses/quick-guide-gplv3.html">GPLv3 (General Public License version 3)</a> license.<br> 
 <br>
 
 <img id="bottom" src="bottom.png" alt="">
